unpackaged/main/default/objects/BCD_Statement__c/BCD_Statement__c.object-meta.xml
<CustomObject>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <label>BCD Statement</label>
    <nameField>
        <label>BCD Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BCD Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>