unpackaged/main/default/objects/BCD_Statement__c/fields/Always_On_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Always_On_Coupon__c</fullName>
    <description>US-0009503 - DE PRIMA Coupon Billing</description>
    <formula>IF(AND( Coupon__r.RecordType.DeveloperName = &#39;Item_Based&#39;,Coupon__r.Always_On_Coupon__c), true, false)</formula>
    <inlineHelpText>Used for PRIMA, POP, PIP, Tier coupons</inlineHelpText>
    <label>Always On Coupon</label>
    <type>Checkbox</type>
</CustomField>