unpackaged/main/default/objects/BCD_Statement__c/fields/BCD_created_date__c.field-meta.xml
<CustomField>
    <fullName>BCD_created_date__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>The date when this BCD record was created by the ETL process.</inlineHelpText>
    <label>BCD Created Date</label>
    <type>DateTime</type>
</CustomField>