unpackaged/main/default/objects/BCD_Statement__c/fields/BCD_Statement_Id__c.field-meta.xml
<CustomField>
    <fullName>BCD_Statement_Id__c</fullName>
    <displayFormat>BCDS-{00000}</displayFormat>
    <inlineHelpText>BCD Statement ID (autonumber)</inlineHelpText>
    <label>BCD Statement ID</label>
    <type>AutoNumber</type>
</CustomField>