unpackaged/main/default/objects/BCD_Statement__c/fields/BCD_Statement_Quarter__c.field-meta.xml
<CustomField>
    <fullName>BCD_Statement_Quarter__c</fullName>
    <description>US-0011970 - [Contract BCD] 2 New fields to be created</description>
    <formula>&quot;Q&quot; &amp; TEXT(CEILING( MONTH (  Start_date__c  ) / 3 ))</formula>
    <label>BCD Statement Quarter</label>
    <type>Text</type>
</CustomField>