unpackaged/main/default/objects/BCD_Statement__c/fields/BCD_Statement_Year__c.field-meta.xml
<CustomField>
    <fullName>BCD_Statement_Year__c</fullName>
    <description>US-0011970 - [Contract BCD] 2 New fields to be created</description>
    <formula>YEAR( Start_date__c )</formula>
    <label>BCD Statement Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>