unpackaged/main/default/objects/BCD_Statement__c/fields/BU_Approver__c.field-meta.xml
<CustomField>
    <fullName>BU_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <label>BU Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FVF_Statements1</relationshipName>
    <type>Lookup</type>
</CustomField>