unpackaged/main/default/objects/BCD_Statement__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008481 - Coupon BCD statement : New record type</description>
    <inlineHelpText>Related Coupon Record of this BCD Statement.</inlineHelpText>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>BCD Statements</relationshipLabel>
    <relationshipName>BCD_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>