unpackaged/main/default/objects/BCD_Statement__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <formula>Coupon__r.Coupon_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Code</label>
    <type>Text</type>
</CustomField>