unpackaged/main/default/objects/BCD_Statement__c/fields/Coupon_link__c.field-meta.xml
<CustomField>
    <fullName>Coupon_link__c</fullName>
    <description>US-0008446 - Coupon BCD - email notification</description>
    <formula>LEFT($Api.Enterprise_Server_URL_500, FIND( &#39;/services&#39;, $Api.Enterprise_Server_URL_500)) +  Coupon__c</formula>
    <label>Coupon link</label>
    <type>Text</type>
</CustomField>