unpackaged/main/default/objects/BCD_Statement__c/fields/Coupon_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Owner_Email__c</fullName>
    <description>US-0008867 - AU Coupon BCD generation</description>
    <label>Coupon Owner Email</label>
    <type>Email</type>
</CustomField>