unpackaged/main/default/objects/BCD_Statement__c/fields/Coupon_Source__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Source__c</fullName>
    <description>US-0008446 - Coupon BCD - email notification</description>
    <formula>TEXT( Coupon__r.Coupon_Source__c )</formula>
    <label>Coupon Source</label>
    <type>Text</type>
</CustomField>