unpackaged/main/default/objects/BCD_Statement__c/fields/CouponOwnerName__c.field-meta.xml
<CustomField>
    <fullName>CouponOwnerName__c</fullName>
    <description>US-0008446 - Coupon BCD - email notification</description>
    <formula>IF( ISBLANK( Coupon__r.Owner:User.Id ) ,  Coupon__r.Owner:Queue.QueueName ,  Coupon__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Coupon__r.Owner:User.LastName )</formula>
    <label>CouponOwnerName</label>
    <type>Text</type>
</CustomField>