unpackaged/main/default/objects/BCD_Statement__c/fields/Credit_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Total_Value__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>Total Amount of Credits in Site Currency</inlineHelpText>
    <label>Credit Total Value (Site Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>