unpackaged/main/default/objects/BCD_Statement__c/fields/Days_Since_Coupon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Coupon_End_Date__c</fullName>
    <description>US-0008446 - Coupon BCD - email notification</description>
    <formula>Coupon__r.Days_since_coupon_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Coupon End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>