unpackaged/main/default/objects/BCD_Statement__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>BCD Statement Range End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>