unpackaged/main/default/objects/BCD_Statement__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>US-0008313 - [UK] FVF - Attach transactional data to record - BCD file</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID generated by the ETL process</inlineHelpText>
    <label>Record External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>