unpackaged/main/default/objects/BCD_Statement__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FVF_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>