unpackaged/main/default/objects/BCD_Statement__c/fields/FVF_Promo_Month__c.field-meta.xml
<CustomField>
    <fullName>FVF_Promo_Month__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <formula>CASE(MONTH(Start_date__c), 1, &quot;January&quot;, 2, &quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,12,&quot;December&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FVF Promo Month</label>
    <type>Text</type>
</CustomField>