unpackaged/main/default/objects/BCD_Statement__c/fields/Number_of_sellers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sellers__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>Count of distinct sellers in this BCD statement.</inlineHelpText>
    <label>Number of Sellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>