unpackaged/main/default/objects/BCD_Statement__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>Listing Site ID</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site</valueSetName>
    </valueSet>
</CustomField>