unpackaged/main/default/objects/BCD_Statement__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <inlineHelpText>BCD Statement Range Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>