unpackaged/main/default/objects/BCD_Statement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&#39;New&#39;</defaultValue>
    <description>US-0008144 - [UK] FVF - Object creation for Invoicing</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>BCD ready</fullName>
            </value>
            <value>
                <fullName>BU Approval</fullName>
            </value>
            <value>
                <fullName>Finance Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Payment sent</fullName>
            </value>
            <value>
                <fullName>Rejected (BU or Finance)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>