unpackaged/main/default/objects/BCD_Statement__c/recordTypes/ACP_Contract.recordType-meta.xml
<RecordType>
    <fullName>ACP_Contract</fullName>
    <active>true</active>
    <description>ACP Contract BCD Record</description>
    <label>Contract BCD</label>
</RecordType>