unpackaged/main/default/objects/BCD_Statement__c/recordTypes/Coupon_BCD.recordType-meta.xml
<RecordType>
    <fullName>Coupon_BCD</fullName>
    <active>true</active>
    <label>Coupon BCD</label>
</RecordType>