unpackaged/main/default/objects/BCD_Statement__c/recordTypes/Final_Value_Fee.recordType-meta.xml
<RecordType>
    <fullName>Final_Value_Fee</fullName>
    <active>true</active>
    <label>Final Value Fee BCD</label>
</RecordType>