unpackaged/main/default/objects/BCD_Statement__c/listViews/All_BCD_Records.listView-meta.xml
<ListView>
    <fullName>All_BCD_Records</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>FVF_Promo_Month__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_sellers__c</columns>
    <columns>Credit_Total_Value__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>BCD_Statement_Id__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All BCD Records</label>
</ListView>