unpackaged/main/default/objects/BCD_Statement__c/listViews/All_Coupon_BCD_Records.listView-meta.xml
<ListView>
    <fullName>All_Coupon_BCD_Records</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Coupon_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Number_of_sellers__c</columns>
    <columns>Credit_Total_Value__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>BCD_Statement_Id__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BCD_Statement__c.Coupon_BCD</value>
    </filters>
    <label>All Coupon BCD Records</label>
</ListView>