unpackaged/main/default/objects/BCD_Statement__c/listViews/DE_Coupon_BCD_BU_approvers_500k_BCD_Statement.listView-meta.xml
<ListView>
    <fullName>DE_Coupon_BCD_BU_approvers_500k_BCD_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>DE Coupon BCD BU approvers 500k</label>
    <queue>DE_Coupon_BCD_BU_approvers_500k</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>