unpackaged/main/default/objects/BCD_Statement__c/listViews/DE_Coupon_BCD_Finance_approvers_1M_BCD_Statement.listView-meta.xml
<ListView>
    <fullName>DE_Coupon_BCD_Finance_approvers_1M_BCD_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>DE Coupon BCD Finance approvers 1M</label>
    <queue>DE_Coupon_BCD_Finance_approvers_1M</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>