unpackaged/main/default/objects/BCD_Statement__c/listViews/NA_BCD_BU_Below_50K_BCD_Statement.listView-meta.xml
<ListView>
    <fullName>NA_BCD_BU_Below_50K_BCD_Statement</fullName>
    <filterScope>Queue</filterScope>
    <label>NA BCD BU Below $50K</label>
    <queue>NA_BCD_BU_Below_50K</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>